welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: ')' expected but ';' found.
		setCouleurBrosse() = T((litMessage().toInt)%(getMondeHauteur());
                                                                               ^